--- a/app/views/lists/_update_list.html.erb
+++ b/app/views/lists/_update_list.html.erb
@@ -1,7 +1,5 @@
-<%= bootstrap_form_for @list, remote: true do |f| %>
-	<div class="edit-title jumbotron jumbotron-fluid">
-	  <div class="container">
-	    <%= f.text_field :title, hide_label: true %>
-	  </div>
-	</div>
-<% end %>
+<div class="edit-title jumbotron jumbotron-fluid">
+  <div class="container">
+  	<%= editable @list, @list.title, url: list_path(@list), value: @list.title, tag: 'h1', class: 'edit_list' %>
+  </div>
+</div>
