--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,5 @@
  @import "rails_bootstrap_forms";
  @import "font-awesome-sprockets";
  @import "font-awesome";
+ @import "editable/bootstrap-editable";
  @import "lists.scss";
