--- a/app/views/lists/_lists.html.erb
+++ b/app/views/lists/_lists.html.erb
@@ -1,7 +1,7 @@
 <h3 class="title">Mis Listas</h3>
 <% if @lists.present? %>
   <% for list in @lists %>
-    <p> <%= link_to list.title, "#{request.url}#{list.url}" %>  <p>
+    <p> <%= link_to list.title, list %>  <p>
   <% end %>
   
   <div class="more">
