--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,6 @@
 <div class="create-box">
   <div class="container">
-    <%= render 'create_list' %>
+    <%= render 'create_list', list: @list  %>
   </div>
 </div>
 
