--- a/app/views/tasks/_long.html.erb
+++ b/app/views/tasks/_long.html.erb
@@ -2,5 +2,5 @@
 
 <div class="info"
 	<span class="h5">Porcentaje:</span>
-	<strong><%= editable t, :percentage, url: task_path(t), value: "#{t.percentage.to_i}%" %></strong>	
+	<strong><%= editable t, :percentage, url: task_path(t), value: "#{t.percentage.to_f}" %></strong>	
 </div>
