--- a/app/views/tasks/_temporary.html.erb
+++ b/app/views/tasks/_temporary.html.erb
@@ -2,5 +2,5 @@
 
 <div class="info">
 	<span class="h5">Finaliza:</span>
-	<strong><%= editable t, :ending, url: task_path(t), value: t.ending.strftime("%d/%m/%Y %I:%M") %></strong>	
+	<strong><%= editable t, :ending, url: task_path(t), value: t.ending.strftime("%d/%m/%Y %k:%M") %></strong>	
 </div>
