--- a/app/views/lists/_information.html.erb
+++ b/app/views/lists/_information.html.erb
@@ -1,18 +1,18 @@
 <div class="card">
-  <div class="card-header">Datos de la lista</div>
+  <div class="card-header"><%= t(:list_data) %></div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item">
-      <%= @list.created_at.strftime( "Creado el %m/%d/%Y a las %I:%M:%S%p") %>
+      <%= @list.created_at.strftime("Creado el %m/%d/%Y a las %I:%M:%S%p") %>
     </li>
     <li class="list-group-item" id="list-update">
       <%= @list.updated_at.strftime("Actualizado el %m/%d/%Y a las %I:%M:%S%p") %>
     </li>
-    <li class="list-group-item">Cantidad de tareas:
+    <li class="list-group-item"><%= t(:number_of_task) %>:
       <span class="tasks-count"> <%= @list.tasks.count %> </span>
     </li>
   </ul>
   <div class="card-footer"> 
-    <%= link_to 'Destroy', @list,  method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure?' } %>
-    <a role="button" class="btn btn-primary" data-link data-clipboard-text="<%= request.url %>">Copiar Link</a>
+    <%= link_to t('destroy'), @list,  method: :delete, class: 'btn btn-danger', data: { confirm: "#{t(:are_you_sure)}?" } %>
+    <a role="button" class="btn btn-primary" data-link data-clipboard-text="<%= request.url %>"><%= t(:copy_link) %></a>
   </div>
 </div>
