--- a/app/views/tasks/_finished.html.erb
+++ b/app/views/tasks/_finished.html.erb
@@ -3,29 +3,29 @@
 	<div class="open-task">
 		<%= truncate(t.description, :length => 100) %>
 		<br>
-		<button class="btn btn-primary btn-sm">Ver</button>
+		<button class="btn btn-primary btn-sm"><%= t(:see) %></button>
 	</div>
 
 	<div class="task-info" style="display:none">
 		<p> <%= t.description %> </p>
 		<div class="info">
-			<span class="h5">Prioridad:</span><strong><%= t.priority.name %></strong>
+			<span class="h5"><%= t(:priority) %>:</span><strong><%= t.priority.name %></strong>
 		</div>
 
 		<% if t.type == 'Temporary' %>
 			<div class="info">
-				<span class="h5">Inicio:</span><strong><%= t.beginning.strftime("%d/%m/%Y %k:%M") %></strong>
+				<span class="h5"><%= t(:start) %>:</span><strong><%= t.beginning.strftime("%d/%m/%Y %k:%M") %></strong>
 			</div>			
 			<div class="info">
-				<span class="h5">Fin:</span><strong><%= t.ending.strftime("%d/%m/%Y %k:%M") %></strong>
+				<span class="h5"><%= t(:end) %>:</span><strong><%= t.ending.strftime("%d/%m/%Y %k:%M") %></strong>
 			</div>			
 		<% elsif t.type == 'Long' %>
 			<div class="info">
-				<span class="h5">Porcentaje:</span><strong><%= t.percentage %></strong>
+				<span class="h5"><%= t(:percentage) %>:</span><strong><%= t.percentage %></strong>
 			</div>			
 		<% end %>
 
 		<div class="info">
-			<span class="h5">Tipo:</span> <strong> <%= t.type %>  </strong>
+			<span class="h5"><%= t(:type) %>:</span> <strong> <%= t(t.type) %>  </strong>
 		</div>
-		<%= button_to 'Destroy', task_path(t), method: :delete, class: 'btn btn-danger btn-sm', data: { confirm: 'Are you sure?' } %>
+		<%= button_to t(:destroy), task_path(t), method: :delete, class: 'btn btn-danger btn-sm', data: { confirm: "#{t(:are_you_sure)}?" } %>
