--- a/app/views/tasks/_long.html.erb
+++ b/app/views/tasks/_long.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'tasks/simple', locals: {t: t} %>
 
-<div class="info"
-	<span class="h5">Porcentaje:</span>
+<div class="info">
+	<span class="h5"><%= t(:percentage) %>:</span>
 	<strong><%= editable t, :percentage, url: task_path(t), value: "#{t.percentage.to_f}" %></strong>	
 </div>
