--- a/app/views/tasks/_simple.html.erb
+++ b/app/views/tasks/_simple.html.erb
@@ -2,17 +2,17 @@
 	
 	<div class="open-task">
 		<%= truncate(t.description, :length => 100) %>
-		<button class="btn btn-primary btn-sm">Editar</button>
+		<button class="btn btn-primary btn-sm"><%= t(:edit) %></button>
 	</div>
 
 	<div class="task-info" style="display:none">
 		<%= editable t, :description, url: task_path(t), value: t.description %>
 		 <div class="info">
-		 		<span class="h5">Prioridad:</span> 
+		 		<span class="h5"><%= t(:priority) %>:</span> 
 		 		<strong><%= editable t, :priority_id, url: task_path(t), value: t.priority.id %></strong>
 		 	</div>
 
 		 <div class="info">
-			 <span class="h5">Estado:</span> 
+			 <span class="h5"><%= t(:status) %>:</span> 
 			 <strong><%= editable t, :status_id, url: task_path(t), value: t.status.id %></strong>
 		 </div>
