--- a/app/views/tasks/_temporary.html.erb
+++ b/app/views/tasks/_temporary.html.erb
@@ -1,4 +1,6 @@
-<%= render partial: 'tasks/simple', locals: {t: t} %>
+<div class="info">
+	<span class="h5"><%= t(:start) %>: </span><strong><%= t.beginning.strftime("%d/%m/%Y %k:%M") %></strong>
+</div>			
 
 <div class="info">
 	<span class="h5"><%= t(:end) %>: </span>
