--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -11,6 +11,10 @@
     padding-bottom: 13px;
 }
 
+span.editable-clear-x {
+    display: none!important;
+}
+
 .task .editable-container.editable-inline {
   display: inline; 
 }
