--- a/app/views/lists/_create_list.html.erb
+++ b/app/views/lists/_create_list.html.erb
@@ -1,7 +1,7 @@
-<h1> <%= t(:create_list) %> </h1>
+<h1 class="display-1"> <%= t(:title_page) %> </h1>
 <p><%= t(:description_create) %></p>
 <div class="row">
-  <div class="col-xs-7 offset-xs-2">
+  <div class="col-xs-10 offset-xs-1">
     <%= bootstrap_form_for list do |f| %>
       <div class="input-group">
         <%= f.text_field :title, hide_label: true, required: 'required' %>
