--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -15,11 +15,11 @@ span.editable-clear-x {
     display: none!important;
 }
 
-.task .editable-container.editable-inline {
+.editable-container.editable-inline {
   display: inline; 
 }
 
-.task .editable-input {
+.editable-input {
   display: inline; 
 }
 
